config tmux for mode-keys vi - add bindis for [h, j, k, l] keys - set global default terminal mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,3 +5,5 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# set the default terminal mode to 256color mode
+set -g default-terminal "screen-256color"
