--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,47 @@
-set-window-option -g mode-keys vi
+#set -g status-utf8 on               #enable utf-8
+set -g history-limit 100000         #scroll buffer n lines
+#set window-option -g xterm-keys on 
+#set window-option -g utf8 on 
+# Automatically set window title
+#set -g automatic-rename on
+#set -g set-titles on
+# Change prefix key key to C-a
+set -g prefix C-a
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# split panes using v  and h
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
-# set the default terminal mode to 256color mode
+# Start index of window/pane with 1, because weŕe humans, not computers
+set -g base-index 1
+set -g pane-base-index 1 
+
+set -s escape-time 0                #reduce time for espace sequences
+
+### colours can be defined both witth RGB or with colour0 to colour255:
 set -g default-terminal "screen-256color"
+
+# set parent terminal title to reflect current window in tmux session
+set -g set-titles on
+set -g set-titles-string "#I:#W"
+
+# Enable mouse support
+set -g mouse on
+#set -g mouse-select-window on
+#set -g mouse-select-pane on
+#set -g mouseresize-pane on
+
+#THEME
+set -g status-bg black
+#set -g status-bg "#b5bd68"
+set -g status-fg white
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g window-status-attr bold
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami)'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
