add format for comments

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,14 @@
-#set -g status-utf8 on               #enable utf-8
-set -g history-limit 100000         #scroll buffer n lines
+# enable utf-8
+#set -g status-utf8 on
+# scroll buffer n lines
+set -g history-limit 100000
 #set window-option -g xterm-keys on 
 #set window-option -g utf8 on 
+
 # Automatically set window title
 #set -g automatic-rename on
 #set -g set-titles on
+
 # Change prefix key key to C-a
 set -g prefix C-a
 
@@ -16,11 +20,11 @@ unbind %
 
 # Start index of window/pane with 1, because weŕe humans, not computers
 set -g base-index 1
-set -g pane-base-index 1 
+set -g pane-base-index 1
 
-set -s escape-time 0                #reduce time for espace sequences
+set -s escape-time 0 # reduce time for espace sequences
 
-### colours can be defined both witth RGB or with colour0 to colour255:
+# colours can be defined both witth RGB or with colour0 to colour255:
 set -g default-terminal "screen-256color"
 
 # set parent terminal title to reflect current window in tmux session
