--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,51 +1,55 @@
+set-option -g focus-events on
+setw -g mouse on
+
+# No delay for escape key press
+set -sg escape-time 0
+
 # enable utf-8
-#set -g status-utf8 on
-# scroll buffer n lines
-set -g history-limit 100000
-#set window-option -g xterm-keys on 
-#set window-option -g utf8 on 
+#set-option -g status-utf8 on
+#set-option -sa terminal-overrides 'screen-255color'
+
+set-window-option -g mode-keys vi 
+set-window-option -g xterm-keys on 
+set-window-option -g utf8 on 
+
+set -g status-keys vi
+set -g history-limit 10000
+
+unbind C-b
+set-option -g prefix C-a
 
 # Automatically set window title
-#set -g automatic-rename on
-#set -g set-titles on
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+set-option -s set-clipboard on
 
-# Change prefix key key to C-a
-set -g prefix C-a
-
-# split panes using v  and h
-bind | split-window -h
-bind - split-window -v
+# Split window
+bind v split-window -h
+bind s split-window -v
 unbind '"'
 unbind %
 
-# Start index of window/pane with 1, because weŕe humans, not computers
-set -g base-index 1
-set -g pane-base-index 1
+# Vim style pane selection
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
 
-set -s escape-time 0 # reduce time for espace sequences
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
-# colours can be defined both witth RGB or with colour0 to colour255:
-set -g default-terminal "screen-256color"
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'wfxr/tmux-power' # theme for tmux
+set -g @tmux_power_theme 'moon' # setup moon theme
+set -g @plugin 'tmux-plugins/tmux-yank' # yank for clipboard
 
-# set parent terminal title to reflect current window in tmux session
-set -g set-titles on
-set -g set-titles-string "#I:#W"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
-# Enable mouse support
-set -g mouse on
-#set -g mouse-select-window on
-#set -g mouse-select-pane on
-#set -g mouseresize-pane on
-
-#THEME
-set -g status-bg black
-#set -g status-bg "#b5bd68"
-set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g window-status-attr bold
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
-
+# Reload tmux config
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
