Fix error 127 when trying to install plugins
- Delete duplicate code

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,3 @@
-set-option -g focus-events on
-setw -g mouse on
-
 # No delay for escape key press
 set -sg escape-time 0
 
@@ -15,24 +12,8 @@ set-window-option -g xterm-keys on
 set -g status-keys vi
 set -g history-limit 10000
 
-unbind C-b
-set-option -g prefix C-Space
 set-option -g focus-events on
 setw -g mouse on
-
-# No delay for escape key press
-set -sg escape-time 0
-
-# enable utf-8
-#set-option -g status-utf8 on
-#set-option -sa terminal-overrides 'screen-255color'
-
-set-window-option -g mode-keys vi
-set-window-option -g xterm-keys on
-# set-window-option -g utf8 on 
-
-set -g status-keys vi
-set -g history-limit 10000
 
 unbind C-b
 set-option -g prefix C-Space
@@ -60,51 +41,22 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'wfxr/tmux-power' # theme for tmux
-set -g @tmux_power_theme 'moon' # setup moon theme
-set -g @plugin 'tmux-plugins/tmux-yank' # yank for clipboard
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
-set-option -s set-clipboard on
-
-# Split window
-bind v split-window -h
-bind s split-window -v
-unbind '"'
-unbind %
-
-# Vim style pane selection
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
-
-# Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'wfxr/tmux-power' # theme for tmux
+ set -g @tpm_plugins '          \
+   tmux-plugins/tpm             \
+   tmux-plugins/tmux-sensible   \
+   wfxr/tmux-power              \
+   tmux-plugins/tmux-yank       \
+ '
 set -g @tmux_power_theme 'moon' # setup moon theme
-set -g @plugin 'tmux-plugins/tmux-yank' # yank for clipboard
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
+run -b '~/.tmux/plugins/tpm/tpm'
 
-# Reload tmux config
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
